# netconf-client

./: .gitignore  LICENSE  README.md  main.py  main.spec  pyinstaller.py  pyproject.toml  requirements.txt  runtime_hook.py  usage.md
simple_netconf_client/: __init__.py
simple_netconf_client/gui/: Dialogs.py  SimpleNetconfClient.py
simple_netconf_client/network/: Netconf.py
