[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]==6.3.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netconf-client"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
